# GTAV-NativeDB

./: .dockerignore  .env  .env.example  .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  index.html  package-lock.json  package.json  pubspec.yaml  rustfmt.toml  special-schema.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: build-latest.yml  continuous-integration.yml
android/app/: build.gradle
assets/: icon-large.afdesign  icon-medium.afdesign  icon-small.afdesign  icon.afdesign
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/model/: native.dart
lib/widgets/: natives_list.dart
public/: index.html  manifest.json
public/GTA5/: manifest.json
public/RDR3/: manifest.json
server/: Cargo.toml  build.rs
server/src/: game.rs  main.rs  native_preview_service.rs  native_service.rs
server/src/native_preview_service/: preview.html
server/src/native_service/: external.rs  native.rs
spa/: .dockerignore  package-lock.json  package.json
spa/public/: index.html  manifest.json
spa/src/: App.tsx  NativeLoader.ts  Theme.tsx  service-worker.ts  serviceWorkerRegistration.ts
src/: App.js  App.jsx  App.tsx  NativeLoader.ts  Router.tsx  Theme.tsx  constants.ts  index.css  index.tsx  main.rs  service-worker.ts  serviceWorkerRegistration.ts  style.css
src/code-gen/: CPlusPlusCodeGenerator.js  CSharpCodeGenerator.js  CodeGenerator.js  util.js
test/: widget_test.dart
wasm-lib/: Cargo.toml
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+293 files in other folders)
